# CMake-Template

./: .gitignore  CMakeLists.txt  ProjectConfig.json  project.ps1
